# librazer

./: CMakeLists.txt  Cargo.toml  README.md  chromacommon.rs  hidtest.c  hidtest.h  library.h  main.rs  rzcommon.c  rzcommon.h  rzcommon.rs  rzdevices.rs  test.c
include/libusb-1.0/: libusb.h
src/: capabilities.rs  chromacommon.c  chromacommon.h  chromacommon.rs  controllers.rs  device.rs  lib.rs  main.rs  protocol.rs  razer_device.rs  razer_product.rs  razer_report.rs  rzcommon.c  rzcommon.h  rzcommon.rs  rzdevices.h  test.c  usb_device.rs  usbcommon.c  usbcommon.h  usbcommon.rs
src/capabilities/: adjustable_dpi.rs  chroma_capable.rs  rechargable.rs
src/controllers/: chroma_controller.rs
src/device/: razer_device.rs  usb_device.rs
src/legacy/: chromacommon.rs  main.rs  rzcommon.rs
src/protocol/: constants.rs  razer_report.rs  status.rs
src/utils/: errors.rs
